Use `List.of()` and `Set.of()` where feasible.
Closes #3231